@@ -60,7 +60,6 @@
   <a href='network.html#dhcpdetector'>dhcpdetector</a><br>
   <a href='network.html#mode'>mode</a><br>
   <a href='network.html#named'>named</a><br>
-  <a href='network.html#nat'>nat</a><br>
   <a href='network.html#rogueinterval'>rogueinterval</a><br>
   <a href='network.html#vlan'>vlan</a><br>
 <p><b>[passthroughs]</b><br>
