@@ -57,6 +57,8 @@
           (http://www.packetfence.org/mantis/view.php?id=428)
         removed trapping.redirlocal parameter
           (http://www.packetfence.org/mantis/view.php?id=434)
+        removed inline deployment mode
+          (http://www.packetfence.org/mantis/view.php?id=436)
 
 1.7.4
         undef operator in SNMP.pm
